...
                        .overlay(
                            RoundedRectangle(cornerRadius: 10)
                                .stroke(Color("Primary"), lineWidth: 3)
                            )
                        .multilineTextAlignment(.center)
                        .font(.system(size: 24))
                        .accessibility(identifier: "waterTextField")

                    Text("water")
                        .fixedSize()
                        .foregroundColor(Color("Text"))
                        .font(.system(size: 14))
                }
...
